# Moer-Rust

./: .gitignore  Cargo.toml  README.md  examples
src/: main.rs
src/core_layer/: colorspace.rs  constants.rs  distribution.rs  function.rs  geometry.rs  mod.rs  transform.rs
src/function_layer/: acceleration.rs  bounds3.rs  camera.rs  film.rs  interaction.rs  mod.rs  ray.rs  scene.rs
src/function_layer/acceleration/: acceleration.rs  bvh.rs  linear.rs  mod.rs  octree.rs
src/function_layer/integrator/: black_hole_integrator.rs  direct_integrator.rs  integrator.rs  mod.rs  normal_integrator.rs  path_integrator.rs  volpath.rs  whitted_integrator.rs
src/function_layer/light/: area_light.rs  environment_light.rs  light.rs  mod.rs  spot_light.rs
src/function_layer/material/: black_hole.rs  conductor.rs  dielectric.rs  material.rs  matte.rs  mirror.rs  mod.rs  oren_nayar.rs  phong.rs  phong_material.rs  transparent.rs
src/function_layer/material/bxdf/: bsdf.rs  lambert.rs  mod.rs  oren_nayar.rs  phong.rs  rough_conductor.rs  rough_dielectric.rs  specular.rs  transparent.rs  warp.rs
src/function_layer/medium/: grid_density.rs  homogeneous.rs  medium.rs  mod.rs
src/function_layer/sampler/: independent_sampler.rs  mod.rs  sampler.rs
src/function_layer/shape/: cone.rs  cube.rs  cylinder.rs  disk.rs  intersection.rs  mod.rs  parallelogram.rs  shape.rs  sphere.rs  triangle.rs
src/function_layer/texture/: constant_texture.rs  image_texture.rs  mipmap.rs  mod.rs  normal_texture.rs  texture.rs
src/resource_layer/: image_io.rs  mesh.rs  mod.rs
(+6 files in other folders)
