[package]
name = "moer-lite-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = { version = "0.18.0", features = ["swizzle"] }
fastapprox = "0.3.0"
image = "0.24.5"
nalgebra = "0.32.2"
rand = "0.8.5"
serde_json = "1.0.94"
tobj = "3.2.4"
